# spellhaven

./: Cargo.toml  _Cargo.toml
.github/workflows/: steam.yml
assets/: terrain_noise.ron  terrain_noise_graph.ron  tree_test.ron
assets/shaders/: terrain_material.wgsl
crates/debug_resource/: Cargo.toml
crates/debug_resource/src/: debug_resource.rs  lib.rs
crates/debug_tools/: Cargo.toml
crates/debug_tools/src/: chunk_gizmos.rs  debug_plugin.rs  lib.rs  physics_debug.rs  terrain_derivative.rs
crates/debug_tools/src/terrain_node_editor/: all_terrain_node_templates.rs  mod.rs  noise_output_type.rs  terrain_data_type.rs  terrain_graph_resource.rs  terrain_graph_state.rs  terrain_node_data.rs  terrain_node_template.rs  terrain_response.rs  terrain_user_state.rs  terrain_value_type.rs
crates/main_menu/: Cargo.toml
crates/main_menu/src/: lib.rs  main_menu_data.rs  main_menu_plugin.rs  main_menu_state.rs
crates/networking/: Cargo.toml
crates/networking/src/: create_world.rs  lib.rs  networking_plugin.rs  networking_state.rs  sendables.rs  start_self_session.rs  start_steam_server.rs  start_websocket_client.rs  start_websocket_server.rs
crates/noise/: Cargo.toml
crates/noise/src/: gradient.rs  lib.rs  permutationtable.rs  simplex.rs  worley.rs
crates/physics/: Cargo.toml
crates/physics/src/: aabb_collider.rs  collider.rs  collider_trait.rs  compund_collider.rs  lib.rs  network_physics_buffer.rs  network_physics_object.rs  network_physics_smoothing.rs  physics_object.rs  physics_plugin.rs  physics_position.rs  physics_previous_position.rs  physics_systems.rs  physics_velocity.rs  update_physics.rs
crates/player/: Cargo.toml
crates/player/src/: lib.rs  player_camera_movement.rs  player_component.rs  player_inputs.rs  player_movement.rs  player_plugin.rs
crates/player/src/camera/: mod.rs  player_camera.rs  player_camera_lerp.rs  player_camera_plugin.rs  player_camera_target.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: game_plugins.rs  lib.rs  terrain_editor_plugin.rs
crates/ui/: Cargo.toml
crates/ui/src/: game_ui_plugin.rs  initial_chunk_loader.rs  lib.rs  main_menu_plugin.rs  main_menu_state.rs  task_text.rs  triangle_count_text.rs
crates/utils/: Cargo.toml
crates/utils/src/: cartesian_product.rs  lib.rs
crates/world_generation/: Cargo.toml
crates/world_generation/src/: generation_options.rs  initial_chunk_loader.rs  lib.rs  start_world_gen.rs  terrain_material.rs  world_generation_plugin.rs  world_generation_state.rs  world_ready.rs
crates/world_generation/src/chunk_generation/: block_type.rs  chunk.rs  chunk_generation_plugin.rs  chunk_generation_result.rs  chunk_lod.rs  chunk_start.rs  chunk_task.rs  chunk_triangles.rs  mesh_generation.rs  mesh_type.rs  mod.rs  terrain_mesh.rs  voxel_data.rs  voxel_generation.rs
crates/world_generation/src/chunk_generation/country/: cache_generation_task.rs  country_cache.rs  country_cache_position.rs  country_data.rs  generation_cache.rs  path_data.rs  structure_data.rs
crates/world_generation/src/chunk_generation/noise/: abs.rs  add.rs  add_n.rs  cellular_noise.rs  constant.rs  full_cache.rs  gradient_fractal_noise.rs  lod_height_adjuster.rs  map_range.rs  max.rs  mod.rs  multiply.rs  negate.rs  noise_function.rs  noise_result.rs  power.rs  roughness.rs  scale_point.rs  shift_n_scale.rs  simplex.rs  smooth_step.rs  steepness.rs  terrain_noise.rs  terrain_noise_group.rs  terrain_noise_type.rs  translate_point.rs
crates/world_generation/src/chunk_generation/structures/: mod.rs  noise_wrapper.rs  oak_structure_generator.rs  pine_structure_generator.rs  structure_generator.rs  structure_generators.rs  structure_model.rs  tree_structure_generator.rs
crates/world_generation/src/chunk_generation/structures/foliage_generation/: entry_range.rs  mod.rs  oak_l_system.rs  oak_options.rs  pine_l_system.rs  pine_options.rs  tree_l_system.rs
crates/world_generation/src/chunk_loading/: chunk_load_cache.rs  chunk_loader.rs  chunk_loader_plugin.rs  chunk_node.rs  chunk_pos.rs  chunk_tree.rs  lod_position.rs  mod.rs  node_state.rs  visual_chunk_loader.rs
spellhaven_game/: Cargo.toml
spellhaven_game/src/: main.rs
src/: lib.rs
src/animation/: animation_plugin.rs
src/debug_tools/: chunk_gizmos.rs  debug_plugin.rs  mod.rs  physics_debug.rs
src/debug_tools/terrain_node_editor/: all_terrain_node_templates.rs  terrain_data_type.rs  terrain_graph_resource.rs  terrain_node_data.rs  terrain_node_template.rs  terrain_value_type.rs
src/networking/: mod.rs  networking_plugin.rs  sendables.rs
src/physics/: aabb_collider.rs  collider.rs  collider_trait.rs  compund_collider.rs  mod.rs  physics_object.rs  physics_plugin.rs  physics_position.rs  physics_set.rs  update_physics.rs
src/player/: mod.rs  player_camera_movement.rs  player_collision.rs  player_component.rs  player_movement.rs  player_plugin.rs
src/ui/: initial_chunk_loader.rs  main_menu_plugin.rs  triangle_count_text.rs
src/utils/: file_utils.rs  math.rs  mod.rs  util_plugin.rs  velocity.rs
src/world_generation/: generation_options.rs  mod.rs  terrain_material.rs  world_generation_plugin.rs  world_generation_state.rs
src/world_generation/chunk_generation/: ambient_occlusion.rs  chunk.rs  chunk_generation_plugin.rs  chunk_generation_result.rs  chunk_lod.rs  chunk_start.rs  chunk_task.rs  chunk_triangles.rs  mesh_generation.rs  mod.rs  voxel_data.rs  voxel_generation.rs
src/world_generation/chunk_generation/country/: a_star_candidate.rs  cache_generation_task.rs  country_cache.rs  country_cache_position.rs  country_data.rs  generation_cache.rs  mod.rs  path_data.rs  structure_data.rs
src/world_generation/chunk_generation/noise/: cellular_noise.rs  fractal_open_simplex.rs  lod_height_adjuster.rs  terrain_noise.rs  terrain_noise_type.rs
src/world_generation/chunk_generation/structures/: mod.rs  oak_structure_generator.rs  structure_model.rs  (+4 more)
src/world_generation/chunk_loading/: chunk_load_cache.rs  chunk_loader.rs  chunk_loader_plugin.rs  chunk_node.rs  chunk_node_children.rs  chunk_pos.rs  chunk_tree.rs  lod_position.rs  node_state.rs
(+3 files in other folders)
