[package]
name = "spellhaven"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug_tools mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
bevy = { version = "0.17.2" }
bevy_panorbit_camera = { version = "=0.29.0", features = ["bevy_egui"] }
rand = "0.9.2"
futures-lite = "2.6.1"
noise = "0.9"
bevy_atmosphere = "0.13.0"
fastrand = "2.3.0"
vox-format = "0.1.0"
bevy-inspector-egui = "0.34.0"
num-traits = "0.2.19"
bitflags = "2.9.4"
fastnoise-lite = "1.1.1"
epaint = "0.32.3"
itertools = "0.14.0"
egui_node_editor = {version = "=0.8.0", features = ["persistence"]}
egui = "0.32.3"
anyhow = "1.0.100"
serde = "1.0.219"
ron = "0.11.0"
bevy_egui = "0.37.0"

[dev-dependencies]
brunch = "0.5.0"
