[package]
name = "spellhaven"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = [
    "crates/*"
]

[dependencies]
debug_resource = { path = "crates/debug_resource" }
debug_tools = { path = "crates/debug_tools" }
main_menu = { path = "crates/main_menu" }
networking = { path = "crates/networking" }
physics = { path = "crates/physics" }
player = { path = "crates/player" }
ui = { path = "crates/ui" }
utils = { path = "crates/utils" }
world_generation = { path = "crates/world_generation" }
bevy = { version = "0.17.2", features = ["serialize"] }
bevy_panorbit_camera = { version = "=0.30.0", features = ["bevy_egui"] }
rand = "0.9.2"
futures-lite = "2.6.1"
noise = "0.9"
fastrand = "2.3.0"
vox-format = "0.1.0"
bevy-inspector-egui = "0.34.0"
num-traits = "0.2.19"
bitflags = "2.9.4"
fastnoise-lite = "1.1.1"
epaint = "0.33.0"
itertools = "0.14.0"
egui_node_editor = { version = "=0.9.0", features = ["persistence"] }
egui = "0.32.0"
anyhow = "1.0.100"
serde = "1.0.219"
ron = "0.11.0"
bevy_egui = "0.37.0"
bevy_hookup_core = {version = "5.0.1", path = "../bevy_hookup/bevy_hookup_core"}
bevy_hookup_macros = "1.0.0"
bevy_hookup_messenger_steamworks = "1.0.0"
tokio = "1.47.1"
bevy-steamworks = "0.15.0"
steamworks = "0.12.2"
crossbeam = "0.8.4"

[workspace.dependencies]
debug_resource = { path = "crates/debug_resource" }
debug_tools = { path = "crates/debug_tools" }
main_menu = { path = "crates/main_menu" }
networking = { path = "crates/networking" }
physics = { path = "crates/physics" }
player = { path = "crates/player" }
ui = { path = "crates/ui" }
utils = { path = "crates/utils" }
world_generation = { path = "crates/world_generation" }
bevy = { version = "0.17.2", features = ["serialize"] }
bevy_panorbit_camera = { version = "=0.30.0", features = ["bevy_egui"] }
rand = "0.9.2"
futures-lite = "2.6.1"
noise = "0.9"
fastrand = "2.3.0"
vox-format = "0.1.0"
bevy-inspector-egui = "0.34.0"
num-traits = "0.2.19"
bitflags = "2.9.4"
fastnoise-lite = "1.1.1"
epaint = "0.33.0"
itertools = "0.14.0"
egui_node_editor = { version = "=0.8.0", features = ["persistence"] }
egui = "0.32.0"
anyhow = "1.0.100"
serde = "1.0.219"
ron = "0.11.0"
bevy_egui = "0.37.0"
bevy_hookup_core = {version = "5.0.1", path = "../bevy_hookup/bevy_hookup_core"}
bevy_hookup_macros = "1.0.0"
bevy_hookup_messenger_steamworks = "1.0.0"
tokio = "1.47.1"
bevy-steamworks = "0.15.0"
steamworks = "0.12.2"
crossbeam = "0.8.4"

# Enable a small amount of optimization in debug_tools mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1

[profile.profiling]
inherits = "release"
debug = true

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]
