[package]
name = "debug_tools"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_hookup_core.workspace = true
noise.workspace = true
egui.workspace = true
egui_node_editor.workspace = true
serde.workspace = true
anyhow.workspace = true
ron.workspace = true
physics.workspace = true
player.workspace = true
world_generation.workspace = true
debug_resource.workspace = true