[package]
name = "plugins"
edition = "2024"

[dependencies]
bevy.workspace = true
bevy-inspector-egui.workspace = true
bevy_panorbit_camera.workspace = true
bevy-steamworks.workspace = true
debug_tools.workspace = true
main_menu.workspace = true
networking.workspace = true
physics.workspace = true
player.workspace = true
ui.workspace = true
world_generation.workspace = true
bevy_egui.workspace = true
egui.workspace = true
egui_node_editor.workspace = true
itertools.workspace = true
rand.workspace = true
rayon.workspace = true